--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -5,12 +5,18 @@
   background-color: rgb(52, 48, 45);
   color: white;
   padding: 0.5rem 1rem;
+  font-weight: bold;
 }
 .Nav ul {
   list-style: none;
   padding: 0;
   margin: 0;
   display: flex;
+}
+.Nav .Logo{
+  padding: 0 1.5rem;
+  font-size: 1.6rem;
+  font-weight: bold;
 }
 .Nav a {
   display: block;
