--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,7 @@
 .Footer {
-  background-color: rgb(52, 48, 45);
+  background-color: rgba(110, 49, 2, 0.851);
   padding: 1rem;
   text-align: center;
   color: white;
+  margin: -10px;
 }
