--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,19 +1,20 @@
 .Header {
-  min-height: 70vh;
+  min-height: 75vh;
   background-color: aliceblue;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 1rem;    
+  margin: -10px;   
   background-size: cover;
   background-position: center;
   color: white;
   text-shadow: 0 0 20px rgba(255, 255, 255, .5);
 }
 .Header h1 {
-  margin: 0;
+  margin:20px;
   font-size: 3rem;
 }
 p{
   font-size: 23px;
+  margin: 20px;
 }
