--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -2,10 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: rgb(52, 48, 45);
+  background-color: rgba(110, 49, 2, 0.851);
   color: white;
   padding: 0.5rem 1rem;
   font-weight: bold;
+  margin: -10px;
 }
 .Nav ul {
   list-style: none;
