--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,20 +1,32 @@
 .Header {
-  min-height: 75vh;
-  background-color: aliceblue;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: -10px;   
-  background-size: cover;
-  background-position: center;
-  color: white;
-  text-shadow: 0 0 20px rgba(255, 255, 255, .5);
+  position: relative;
+  margin-bottom: 5rem;
+}
+
+.Header img {
+  width: 100%;
+  height: 40vh;
+  min-height: 380px;
+  object-fit: cover;
+  object-position: center;
+
+  margin: 2rem 0;
+  border-radius: 2rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+}
+.Header section {
+  position: absolute;
+  bottom: -3rem;
+  right: 2rem;
+  max-width: 500px;
+  margin-left: 2rem;
+
+  background-color: white;
+  padding: 0 2rem 0;
+  border-radius: 2rem;
+  font-size: 1.2rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .3);
 }
 .Header h1 {
-  margin:20px;
-  font-size: 3rem;
-}
-p{
-  font-size: 23px;
-  margin: 20px;
+  font-size: 2rem;
 }
