--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,21 +1,16 @@
 .Nav {
+  background-color: rgba(110, 49, 2, 0.851);
+  color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+}
+.Nav .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: rgba(110, 49, 2, 0.851);
-  color: white;
-  padding: 0.5rem 1rem;
-  font-weight: bold;
-  margin: -10px;
 }
 .Nav ul {
   list-style: none;
   padding: 0;
   margin: 0;
   display: flex;
-}
-.Nav .Logo {
-  padding: 0 1.5rem;
-  font-size: 1.6rem;
-  font-weight: bold;
 }
