--- a/src/components/Nav/NavItem/NavItem.css
+++ b/src/components/Nav/NavItem/NavItem.css
@@ -10,5 +10,7 @@
   border-color: white;
 }
 .NavItem a:hover {
+  color: aliceblue;
+  border-color: white;
   background-color: rgba(255, 255, 255, 0.1);
 }
