--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,13 +5,10 @@
 
 .Header img {
   width: 100%;
-  height: 40vh;
-  min-height: 380px;
   object-fit: cover;
   object-position: center;
-
-  margin: 2rem 0;
-  border-radius: 2rem;
+  height: 500px;
+margin: 2px 0;
   box-shadow: 0 0 10px rgba(0, 0, 0, .3);
 }
 .Header section {
