added drawer file

--- a/src/components/Drawer/Drawer.module.css
+++ b/src/components/Drawer/Drawer.module.css
@@ -1,6 +1,6 @@
 .Drawer .content {
   padding: 1rem 0;
-  background-color: rgb(63, 29, 5);
+  background-color: rgba(110, 49, 2, 0.851);
   color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, .3);
   width: 260px;
