--- a/src/components/Nav/NavItem/NavItem.css
+++ b/src/components/Nav/NavItem/NavItem.css
@@ -14,3 +14,9 @@
   border-color: white;
   background-color: rgba(255, 255, 255, 0.1);
 }
+@media (max-width: 620px) {
+  .NavItem a {
+    border-bottom: none;
+    border-right: 5px solid transparent;
+  }
+}
