--- a/src/components/Toolbar/Toolbar.module.css
+++ b/src/components/Toolbar/Toolbar.module.css
@@ -1,5 +1,5 @@
 .Toolbar {
-  background-color: rgb(63, 29, 5);
+  background-color: rgba(110, 49, 2, 0.851);
   color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, .3);
 }
@@ -10,6 +10,10 @@
   max-width: 987px;
   margin: 0 auto;
   padding: 0 1rem;
+}
+.Toolbar ul {
+  display: flex;
+  list-style-type: none;
 }
 @media (max-width: 620px) {
   .Toolbar ul {
