--- a/src/components/Toolbar/Toolbar.module.css
+++ b/src/components/Toolbar/Toolbar.module.css
@@ -1,7 +1,7 @@
 .Toolbar {
   background-color: rgba(110, 49, 2, 0.851);
   color: white;
-  box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+  box-shadow: 0 0 10px rgba(210, 94, 17, 0.3);
 }
 .Toolbar .container {
   display: flex;
