--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,10 @@
 .Footer {
-  background-color: rgba(110, 49, 2, 0.851);
-  padding: 1rem;
+  background-color: #3b2702;
   text-align: center;
   color: white;
-  margin: -10px;
+  width: 100%;
+  height: 100px;
+}
+.Footer .conteiner{
+  margin-top: 1rem;
 }
