--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,5 @@
 .Header {
   position: relative;
-  margin-bottom: 5rem;
 }
 
 .Header img {
@@ -8,12 +7,11 @@
   object-fit: cover;
   object-position: center;
   height: 500px;
-  margin: 0 2rem 0;
   box-shadow: 0 0 10px rgba(0, 0, 0, .3);
 }
+
 .Header section {
   position: absolute;
-  text-align: center;
   max-width: 500px;
 bottom: 10rem;
   padding: 0 2rem 0;
@@ -22,8 +20,10 @@ bottom: 10rem;
   margin: 0 auto;
   color: white;
   left: 5rem;
+  font-weight: bold;
   
 }
 .Header h1 {
   font-size: 2rem;
+  width: 400px;
 }
