--- a/src/components/Toolbar/Toolbar.module.css
+++ b/src/components/Toolbar/Toolbar.module.css
@@ -1,12 +1,12 @@
 .Toolbar {
-  background-color: rgba(110, 49, 2, 0.851);
+  background-color: #3b2702;
   color: white;
   box-shadow: 0 0 10px rgba(210, 94, 17, 0.3);
 }
 .Toolbar .container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   max-width: 987px;
   margin: 0 auto;
   padding: 0 1rem;
@@ -18,5 +18,8 @@
 @media (max-width: 620px) {
   .Toolbar ul {
     display: none;
+  }
+  .Toolbar .container{
+    justify-content: space-between;
   }
 }
