--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,5 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-.container {
-  max-width: 987px;
-  margin: 0 auto;
-}
+/* .container {
+} */
