--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,14 +5,14 @@
   width: 100%;
   height: 300px;
 }
-.Footer ul{
+/* .Footer ul{
  padding-top: 10rem;
 }
 .Footer ul a {
   margin: 10px;
   font-size: 16px;
   font-weight: bold;
-} 
+}  */
 .Footer p{
   font-size: 16px;
   font-weight: bold;
