--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,23 +2,29 @@
   position: relative;
 }
 
+
 .Header img {
   width: 100%;
+  height: 80vh;
+  min-height: 380px;
   object-fit: cover;
   object-position: center;
-  height: 500px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, .3);
-}
 
+
+  margin: 0 auto;
+  display: flex;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+
+}
 .Header section {
   position: absolute;
   max-width: 500px;
-bottom: 10rem;
-  padding: 0 2rem 0;
+  bottom: 9rem;
+  padding: 0 3rem 0;
   border-radius: 2rem;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   margin: 0 auto;
-  color: white;
+  color: rgb(255, 255, 255);
   left: 5rem;
   font-weight: bold;
   
