--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,9 +1,19 @@
-.Nav {
+.Nav .container {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+.Nav ul {
   list-style: none;
   padding: 0;
   margin: 0;
   display: flex;
 }
+
 @media (max-width: 620px) {
   .Nav {
     flex-direction: column;
