--- a/src/components/Nav/NavItem/NavItem.css
+++ b/src/components/Nav/NavItem/NavItem.css
@@ -1,7 +1,8 @@
+
 .NavItem a {
   display: block;
   padding: 1rem 1rem;
-  color: rgb(61, 59, 59);
+  color: white;
   font-size: 1rem;
   text-decoration: none;
   border-bottom: 3px solid transparent;
