--- a/src/components/Nav/NavItem/NavItem.css
+++ b/src/components/Nav/NavItem/NavItem.css
@@ -2,7 +2,7 @@
 .NavItem a {
   display: block;
   padding: 1rem 1rem;
-  color: white;
+  color: black;
   font-size: 1rem;
   text-decoration: none;
   border-bottom: 3px solid transparent;
