--- a/src/components/Nav/NavItem/NavItem.css
+++ b/src/components/Nav/NavItem/NavItem.css
@@ -1,16 +1,17 @@
 
 .NavItem a {
   display: block;
-  padding: 1rem 1rem;
+  padding: 1rem;
   color: black;
   font-size: 1rem;
   text-decoration: none;
   border-bottom: 3px solid transparent;
+  font-weight: bold;
 }
 /* .NavItem a.active {
   border-color: white;
 } */
-.NavItem a:hover {
+.NavItem a:hover{
   color: red;
 }
 @media (max-width: 620px) {
