--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,6 @@
 .Footer {
-  background-color: #000000;
   text-align: center;
-  color: white;
+  color: #000;
   width: 100%;
   height: 100px;
 }
