--- a/src/components/Nav/NavItem/NavItem.css
+++ b/src/components/Nav/NavItem/NavItem.css
@@ -3,7 +3,7 @@
   display: block;
   padding: 1rem;
   color: black;
-  font-size: 1rem;
+  font-size: 18px;
   text-decoration: none;
   border-bottom: 3px solid transparent;
   font-weight: bold;
