--- a/src/components/Toolbar/Toolbar.module.css
+++ b/src/components/Toolbar/Toolbar.module.css
@@ -3,7 +3,7 @@
   color: white;
 }
 .Toolbar .container {
-  display: flex;
+  /* display: flex; */
   align-items: center;
   justify-content: center;
   max-width: 987px; 
