--- a/src/components/CartDisplay/CartDisplay.module.css
+++ b/src/components/CartDisplay/CartDisplay.module.css
@@ -1,3 +1,23 @@
 .CartDisplay .cartItem {
   display: flex;
 }
+
+button {
+  border: 0;
+  margin: 0 1rem;
+  padding: 0 1rem;
+  border-radius: 1rem;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+button:not(:disabled):hover {
+  background-color: rgba(57, 58, 59, 0.589);
+}
+button:focus {
+  outline: none;
+}
+button:disabled {
+  opacity: .5;
+}
