--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,19 +8,18 @@
   width: 700px;
   height: 80vh;
   min-height: 380px;
-
+  max-width: 100%;
 
 
   margin: 0 auto;
   display: flex;
-  box-shadow: 0 0 10px rgba(0, 0, 0, .3);
 
 }
 .Header section {
   /* position: absolute;
   max-width: 500px;
-  bottom: 9rem;
   padding: 0 3rem 0;
+  bottom: 9rem;
   border-radius: 2rem;
   font-size: 1.5rem;
   margin: 0 auto;
@@ -36,4 +35,10 @@
 }
 .Header p{
   width: 300px;
+}
+@media (max-width: 1028px){
+  .Header{
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
