--- a/src/index.css
+++ b/src/index.css
@@ -37,4 +37,44 @@ code {
 h1{
   color: rgb(28, 28, 29);
 }
+.Auth{
+  display: flex;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 2rem 0;
+}
+.Auth input{
+  width: 15rem;
+  height: 2.5rem;
+  margin-bottom: 1rem;
+  border-radius: .8rem;
+  border: 2px solid  rgb(61, 61, 61);
+  font-size: 1.3rem;
+  margin-right: 2rem;
+}
+.Auth input::placeholder{
+  font-size: 1.5rem;
+  color: rgb(71, 73, 75);
+}
+.Auth button {
+  border: 0;
+  border-radius: 1rem;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  margin: 0 1rem;
+  padding: 0 1rem;
+  font-weight: bold;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+.Auth button:not(:disabled):hover {
+  background-color: rgba(70, 70, 70, 0.589);
+}
+.Auth button:focus {
+  outline: none;
+}
+.Auth button:disabled {
+  opacity: .5;
+}
 
