--- a/src/components/CartButton/CartButton.module.css
+++ b/src/components/CartButton/CartButton.module.css
@@ -1,15 +1,16 @@
-button {
-  border: 0;
+.Auth button {
+  border: 1px solid #FE5F1E;
+  border-radius: 1rem;
+  background-color: #FE5F1E;
+  color: white;
   margin: 0 1rem;
   padding: 0 1rem;
-  border-radius: 1rem;
-  background-color: rgb(0, 0, 0);
-  color: white;
+  font-weight: bold;
   font-size: 1.5rem;
   cursor: pointer;
 }
-button:not(:disabled):hover {
-  background-color: rgba(57, 58, 59, 0.589);
+.Auth button:not(:disabled):hover {
+  background-color: #fd8251;
 }
 button:focus {
   outline: none;
