--- a/src/components/CartItem/CartItem.module.css
+++ b/src/components/CartItem/CartItem.module.css
@@ -1,6 +1,17 @@
 .CartItem {
   display: flex;
 }
+.title a{
+  display: block;
+  padding: 0.5rem 1rem;
+  color: black;
+  border-radius: 20px;
+  font-size: 20px;
+  text-decoration: none;
+  border-bottom: 3px solid transparent;
+  font-weight: bold;
+  margin: 0 1rem 2rem;
+}
 .div{
   border-radius: 50px;
   text-align: center;
