chaged  the height of the header image

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,9 +5,8 @@
 
 
 .Header img {
-  width: 700px;
-  height: 80vh;
-  min-height: 380px;
+  width: 500px;
+  height: 350px;
   max-width: 100%;
 
 
