--- a/src/components/ui/Logo/Logo.css
+++ b/src/components/ui/Logo/Logo.css
@@ -1,13 +1,11 @@
 .Logo{
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  padding-top: 1rem;
+  margin-right: 10rem;
 }
 .Logo img{
-  height: 3rem;
-  margin: .5rem;
   cursor: pointer;
+  height: 3rem;
 }
 .Text{
   color: black;
