--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ h1{
   height: 2.5rem;
   margin-bottom: 1rem;
   border-radius: .8rem;
-  border: 2px solid  rgb(61, 61, 61);
+  border: 2px solid  #FE5F1E;
   font-size: 1.3rem;
   margin-right: 2rem;
 }
@@ -58,9 +58,9 @@ h1{
   color: rgb(71, 73, 75);
 }
 .Auth button {
-  border: 0;
+  border: 1px solid #FE5F1E;
   border-radius: 1rem;
-  background-color: rgb(0, 0, 0);
+  background-color: #FE5F1E;
   color: white;
   margin: 0 1rem;
   padding: 0 1rem;
@@ -69,7 +69,7 @@ h1{
   cursor: pointer;
 }
 .Auth button:not(:disabled):hover {
-  background-color: rgba(70, 70, 70, 0.589);
+  background-color: #fd8251;
 }
 .Auth button:focus {
   outline: none;
