--- a/src/components/CategoryList/CategoryList.module.css
+++ b/src/components/CategoryList/CategoryList.module.css
@@ -2,4 +2,13 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  width: 1000px;
+  margin: 0 auto;
+}
+@media(max-width:600px){
+  .CategoryList {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
 }
